--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@adiwajshing/baileys": "^3.5.0",
+    "@adiwajshing/baileys": "^3.5.2",
+    "amethyste-api": "^1.1.5",
     "async": "^2.4.1",
     "awesome-phonenumber": "^2.48.0",
     "axios": "^0.21.1",
@@ -25,14 +26,19 @@
     "fs": "^0.0.1-security",
     "fs-extra": "^10.0.0",
     "g-i-s": "^2.1.6",
+    "google-it": "^1.6.2",
+    "google-translate-api": "^2.3.0",
     "got": "^11.8.2",
     "hxz-api": "^1.0.1",
     "image-to-base64": "^2.2.0",
+    "imgbb-uploader": "^1.3.3",
     "insta-fetcher": "^1.2.3",
     "instagram-web-api": "^2.2.2",
     "jsdom": "^16.5.2",
     "moment-timezone": "^0.5.33",
     "ms": "^2.1.3",
+    "node-gtts": "^2.0.2",
+    "node-webpmux": "^3.1.0",
     "parse-ms": "^2.1.0",
     "performance-now": "^2.1.0",
     "pretty-ms": "^7.0.1",
@@ -47,10 +53,11 @@
     "tiktok-scraper": "^1.4.36",
     "tinyurl": "^1.1.7",
     "twitter-url-direct": "^1.0.1",
-    "usetube": "^2.1.3",
+    "usetube": "^2.1.4",
     "util": "^0.12.4",
-    "wa-sticker-formatter": "^4.0.3",
-    "yt-search": "^2.7.6"
+    "wa-sticker-formatter": "^4.0.14",
+    "yt-search": "^2.7.6",
+    "ytdl-core": "^4.9.1"
   },
   "scripts": {
     "start": "node main",
